--- a/style.css
+++ b/style.css
@@ -2,196 +2,217 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+  font-family: sans-serif;
+}
+
+:root {
+  --bg-color: #2D1F1F;
+  --second-bg-color: #463232;
+  --text-color: #ffffff;
+  --main-color: #ff0000;
 }
 
 html {
-  scroll-behavior: smooth;
+  font-size: 1rem;
+  overflow-x: hidden;
 }
 
 body {
-  background: #1A3A56;
-  color: #FFFFFF;
-  font-family: sans-serif;
-  font-size: 1rem;
+  background: var(--second-bg-color);
+  color: var(--text-color);
+  margin: 0 auto;
 }
 
-#navbar {
-  position:fixed;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2rem;
+  background: var(--bg-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1;
+  box-shadow: 0 0 5px 5px #00000022;
+}
+
+.logo {
+  font-size: 2rem;
+  color: var(--text-color);
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.navbar a {
+  font-size: 20px;
+  color: var(--text-color);
+  margin-left: 4rem;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  color: var(--main-color);
+}
+
+#menu-icon {
+  font-size: 3rem;
+  color: var(--text-color);
+  display: none;
+}
+
+section {
+  min-height: 100vh;
+  padding: 10rem 2rem;
+}
+
+.intro {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
-  width: 100%;
-  top: 0;
-  z-index: 1;
-  background: #C83232;
-  box-shadow: 0 4px 0 rgba(0, 0, 0, 0.4);
-}
-
-#navbar a {
-  text-decoration: none;
-  font-size: 1.6rem;
-  padding: 2 4rem;
-  color: white;
-}
-
-#navbar a:hover {
-  color: orange;
-  font-weight: bold;
- }
-
-.hero-text {
-  display: block;
-  color: white;
-  border-top: solid #fff 4px;
-  border-bottom: solid #fff 4px;
   text-align: center;
-  margin: 12rem 6rem;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
-.hero-title {
-  font-size: 2em;
-  padding-bottom: 3rem
+.intro-content h1 {
+  font-size: 8rem;
+  font-weight: 800;
+  line-height: 13rem;
+}
+
+.intro-content h3 {
+  font-size: 2.5rem;
+}
+
+.intro-content h3:nth-of-type(2) {
+  margin-bottom: 3rem;
+}
+
+span {
+  color: var(--main-color);
+}
+
+.intro-content p {
+  font-size: 1.2rem;
+  line-height: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.social-media a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  background: transparent;
+  border: 2px solid var(--main-color);
+  border-radius: 20px;
+  font-size: 2rem;
+  color: #ffffff;
+  margin: 1.5rem 1.5rem 3rem 0;
+  transition: .5s ease;
+}
+
+.social-media a:hover {
+  background: var(--main-color);
+  color: var(--second-bg-color);
+  box-shadow: 0 0 1px var(--main-color);
 }
 
 @media (hover: hover) {
-  .hero-title:hover:after {
+  .intro-content h1:hover:after {
     content: "]";
-    color: #C83232;
+    color: #B01F1F;
     margin-left: 30px;
   }
-  .hero-title:hover:before {
+  .intro-content h1:hover:before {
     content: "[";  
-    color: #C83232;
+    color: #B01F1F;
     margin-right: 20px;
   }
 }
 
-.hero-desc {
-  line-height: 2.5rem;
-}
-
-h2 {
-  font-size: 3rem;
-  display: block;
-  color: black;
-  border-top: solid #000 4px;
-  border-bottom: solid #000 4px;
+.heading {
   text-align: center;
-  margin: 3rem 3rem 6rem;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  
+  font-size: 4rem;
 }
 
-h3 {
-  color: black;
+.projects {
+  background: var(--bg-color);
 }
 
-#projects {
-  background: white;
-  padding: 1rem;
-  margin-top: 3rem;
+.projects h2 {
+  margin-bottom: 4rem;
 }
 
-.project-tile {
-  text-align: center;
-  background: #C83232;
+.project-container {
   display: grid;
-  grid-gap: 2rem;
-  margin: 0 auto;
-  max-width: 25rem;
-  margin-bottom: 5rem;
-  border-radius: 8px;
-  padding: 2rem;
-}
-
-.project-tile:hover {
-  background-color: #1A3A56;
-  color: #fff;
-}
-
-.project-tile h3 {
-  color: white;
-  font-size: 2rem;
-}
-
-.project-tile a {
-  margin: 0 auto;
-  background-color: #fff;
-  border: 4px solid #e2e8f0;
-  border-radius: 1.5rem;
-  color: #0d172a;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: bold;
-  line-height: 1;
-  padding: 1rem 1.6rem;
-  text-align: center;
-  text-decoration: none;
- }
-
-.project-tile:hover a{
-  background-color: #C83232;
-  color: #fff;
-}
-
-@media (min-width: 768px) {
-  .project-tile a {
-    font-size: 1.125rem;
-    padding: 1rem 2rem;
-  }
-}
-
-#contacts {
-  background: #C83232;
-  height: 45rem;
-}
-
-#contacts h2 {
-  color: #fff;
-  font-size: 3rem;
-  display: block;
-  border-top: solid #fff 4px;
-  border-bottom: solid #fff 4px;
-  text-align: center;
-  margin: 4rem 3rem;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-.contact-links {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
+  grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  gap: 4rem;
-  padding-top: 4rem;
-  word-wrap: wrap;
+  grid-gap: 2rem;
 }
 
-#contact-link {
-  color: #000;
-  text-decoration: none;
-  font-size: 2.5rem;
-  
-} 
-
-#contact-link:hover {
-  color: #fff;
+.project-container .project-box {
+  position: relative;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem var(--bg-color);
+  overflow: hidden;
+  display: flex;
 }
 
-@media (hover: hover) {
-  #contact-link:hover:after {
-    content: "]";
-    color: #000;
-    margin-left: 20px;
-  }
-  #contact-link:hover:before {
-    content: "[";  
-    color: #000;
-    margin-right: 20px;
-  }
+.project-box img {
+  width: 100%;
+  transition: .5s ease;
 }
 
+.project-box:hover img {
+  transform: scale(1.1);
+}
+
+.project-box .project-layer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 0 4rem;
+  transform: translateY(100%);
+  transition: .5s ease;
+}
+
+.project-box:hover .project-layer {
+  transform: translateY(0);
+}
+
+.project-layer h4 {
+  font-size: 3rem;
+}
+
+.project-layer p {
+  font-size: 1rem;
+  margin: .3rem 0 1rem;
+}
+
+.project-layer a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+  background: var(--text-color);
+  border-radius: 50%;
+}
+
+.project-layer a i {
+  font-size: 2rem;
+  color: var(--second-bg-color); 
+}
