--- a/style.css
+++ b/style.css
@@ -206,10 +206,12 @@ span {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 5rem;
-  height: 5rem;
-  background: var(--text-color);
-  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  background: var(--main-color);
+  border-radius: 20px;
+  color: #ffffff;
+  margin: 1.5rem 1.5rem 3rem 0;
 }
 
 .project-layer a i {
