--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ span {
   align-items: center;
   width: 4rem;
   height: 4rem;
-  background: var(--main-color);
+  background: #000000;
   border-radius: 20px;
   color: #ffffff;
   margin: 1.5rem 1.5rem 3rem 0;
