--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ span {
 .intro-content p {
   font-size: 1.2rem;
   line-height: 2.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .social-media a {
@@ -120,19 +120,6 @@ span {
   background: var(--main-color);
   color: var(--second-bg-color);
   box-shadow: 0 0 1px var(--main-color);
-}
-
-@media (hover: hover) {
-  .intro-content h1:hover:after {
-    content: "]";
-    color: #B01F1F;
-    margin-left: 30px;
-  }
-  .intro-content h1:hover:before {
-    content: "[";  
-    color: #B01F1F;
-    margin-right: 20px;
-  }
 }
 
 .heading {
@@ -206,15 +193,123 @@ span {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 4rem;
-  height: 4rem;
-  background: #000000;
-  border-radius: 20px;
-  color: #ffffff;
-  margin: 1.5rem 1.5rem 3rem 0;
+  width: 5rem;
+  height: 5rem;
+  background: var(--text-color);
+  border-radius: 50%;
 }
 
 .project-layer a i {
   font-size: 2rem;
   color: var(--second-bg-color); 
+}
+
+.contact h2{
+  margin-bottom: 3rem;
+}
+
+.contact form {
+  max-width: 70rem;
+  margin: 1rem auto;
+  text-align: center;
+}
+
+.contact form .input-box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact form .input-box input,
+.contact form textarea {
+  width: 100%;
+  padding: 1rem;
+  font-size: 1rem;
+  color: var(--text-color);
+  background: var(--bg-color);
+  border-radius: 6px;
+  margin: 1rem 0;
+}
+
+.contact form .input-box input {
+  width: 48%;
+}
+
+.contact form textarea {
+  resize: none;
+}
+
+.btn {
+  display: inline-block;
+  padding: .5rem 2rem;
+  background: transparent;
+  border-radius: 6px;
+  font-size: 18px;
+  color: #ffffff;
+  letter-spacing: .1rem;
+  font-weight: 600;
+  transition: .5s ease; 
+  cursor: pointer;
+  border: 2px solid var(--main-color);
+}
+
+.btn:hover {
+  background: var(--main-color);
+  color: var(--second-bg-color);
+  box-shadow: 0 0 1px var(--main-color);
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2rem;
+  background: var(--bg-color);
+}
+
+.footer-text p {
+  font-size: 16px;
+}
+
+/* MOBILE SCALE */
+
+@media (max-width: 700px) {
+  html {
+    font-size: 80%;
+  }
+  .project-container {
+    grid-template-columns: 1fr;
+  }
+  .contact {
+    min-height: auto;
+  }
+}
+
+@media (max-width: 590px) {
+  #menu-icon {
+    display: block;
+  }
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem;
+    background: var(--bg-color);
+    border-top: 1px solid rgba(0, 0, 0, .2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    display: none;
+  }
+  .navbar.active {
+  display: block;
+  }
+  .navbar a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
+  }
+  .contact form .input-box input {
+    width: 100%;
+  }
 }
