--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ span {
   height: 5rem;
   border-radius: 50%;
   background: transparent;
-  border: 4px solid #000000;
+  border: 4px solid black;
   border-radius: 20px;
   font-size: 2rem;
   color: #ffffff;
